--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2006-03-19  Sven Neumann  <sven@gimp.org>
+
+	* includes/urls_go-developer.inc: fine-tuned some links.
+
 2006-03-11  Sven Neumann  <sven@gimp.org>
 
 	* tutorials/Basic_Batch/index.htrw: removed the lines that Simon
