updated for 2.3.8 release.
2006-04-12  Sven Neumann  <sven@gimp.org>

	* downloads/index.htrw: updated for 2.3.8 release.

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2006-04-12  Sven Neumann  <sven@gimp.org>
+
+	* downloads/index.htrw: updated for 2.3.8 release.
+
 2006-04-08  Carol Spears  <carol@gimp.org>
 
 	* resources/gradients/Coffee.png: replaced Coffee.png with an image 
