--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2006-04-13  Sven Neumann  <sven@gimp.org>
+
+	* downloads/index.htrw: updated for 2.2.11 release.
+
 2006-04-12  Sven Neumann  <sven@gimp.org>
 
 	* downloads/index.htrw: updated for 2.3.8 release.
