added planets to the menu.
* includes/urls_important.htrw: added planets to the menu.

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,4 +1,7 @@
 2006-05-06  Carol Spears  <carol@gimp.org>
+	* includes/urls_important.htrw: added planets to the menu.
+        
+2006-05-06  Carol Spears  <carol@gimp.org>
 	* images/thegimp.png: took "THE" out of the image.
         
 2006-05-05  Sven Neumann  <sven@gimp.org>
