--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2006-05-09  Carol Spears  <carol@gimp.org>
+	* docs/python/pygimp.html, index.html: added some missing information 
+
+	* docs/index.htrw: removed the entry about gimp-print
+
 2006-05-08  Carol Spears  <carol@gimp.org>
 	* docs/python: removed outdated pages:
         end-note.html gimp-module-procedures.html gimp-objects.html 
