--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,11 @@
+2006-05-13  Carol Spears  <carol@gimp.org>
+	* docs/python/pygimp.html, index.html: fixed typos and mis-spellings 
+        as discovered by Roman Fro³ow and reported on irc (#gimp).  An additional
+        run with ISpell found many more that it fixed... 
+
+	* docs/python/pygimp.txt: added the file which was originally provided 
+        by Sylvain Fourmanoit
+
 2006-05-09  Carol Spears  <carol@gimp.org>
 	* docs/python/pygimp.html, index.html: added some missing information 
 
