fixed more typos and mis-spellings, replaced old clothify.py example with
* docs/python/pygimp.html, index.html, pygimp.txt: fixed more typos and  mis-spellings, replaced old clothify.py example with new one, updated  gimp.query_images() to gimp.image_list.

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2006-05-16  Carol Spears  <carol@gimp.org>
+	* docs/python/pygimp.html, index.html, pygimp.txt: fixed more typos and 
+        mis-spellings, replaced old clothify.py example with new one, updated 
+        gimp.query_images() to gimp.image_list. 
+
 2006-05-13  Carol Spears  <carol@gimp.org>
 	* docs/python/pygimp.html, index.html: fixed typos and mis-spellings 
         as discovered by Roman Fro³ow and reported on irc (#gimp).  An additional
