books/index.htrw, admin/gimp-web-urls: Add Beginning GIMP book.

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,6 @@
+2006-05-17  Carol Spears  <carol@gimp.org>
+	* books/index.htrw, admin/gimp-web-urls: Add Beginning GIMP book.
+
 2006-05-16  Carol Spears  <carol@gimp.org>
 	* docs/python/pygimp.html, index.html, pygimp.txt: added PF_RADIO and
         PF_PALETTE to the param params list.
