--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,6 @@
+2006-05-16  Carol Spears  <carol@gimp.org>
+	* includes/wgo-page-init.htrw: pointed the news url to the new archive.
+
 2006-05-17  Akkana Peck  <akkana@gimp.org>
 	* books/index.htrw, admin/gimp-web-urls,
           books/beginning_gimp_from_novice_to_professional.png: Add
