added GIMP wiki there.
* includes/wgo-page-init.xhtml: added GIMP wiki there.

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,8 +1,11 @@
-2006-05-16  Carol Spears  <carol@gimp.org>
-	* includes/urls_important.htrw: added GIMP wiki there.
+2006-05-30  Carol Spears  <carol@gimp.org>
+	* includes/wgo-page-init.xhtml: added GIMP wiki there.
+
+2006-05-30  Carol Spears  <carol@gimp.org>
+	* includes/urls_important.xhtml: added GIMP wiki there.
 
 2006-05-16  Carol Spears  <carol@gimp.org>
-	* includes/wgo-page-init.htrw: pointed the news url to the new archive.
+	* includes/wgo-page-init.xhtml: pointed the news url to the new archive.
 
 2006-05-17  Akkana Peck  <akkana@gimp.org>
 	* books/index.htrw, admin/gimp-web-urls,
