--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2006-06-06  Sven Neumann  <sven@gimp.org>
+
+	* downloads/index.htrw: updated for 2.3.9 release.
+
 2006-06-01  Sven Neumann  <sven@gimp.org>
 
 	* release-notes/gimp-2.2.htrw
