--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2006-06-08  Sven Neumann  <sven@gimp.org>
+
+	* tutorials/Basic_Batch/index.htrw: fixed indentation of the
+	example script.
+
 2006-06-06  Sven Neumann  <sven@gimp.org>
 
 	* downloads/index.htrw: updated for 2.3.9 release.
