--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2006-07-05  Sven Neumann  <sven@gimp.org>
+
+	* downloads/index.htrw: updated for 2.3.10 release.
+
 2006-06-08  Sven Neumann  <sven@gimp.org>
 
 	* tutorials/Basic_Batch/index.htrw: fixed indentation of the
