--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,10 @@
 2006-07-13  Sven Neumann  <sven@gimp.org>
 
+	* tutorials/Smart_Sharpening/warp-sharp.htrw: updated Script-Fu
+	folder location.
+
+2006-07-13  Sven Neumann  <sven@gimp.org>
+
 	* tutorials/Basic_Scheme/index.htrw:
 	* tutorials/Basic_Scheme2/index.htrw: some updates, still needs
 	more work and new screenshots.
