--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2006-08-11  Sven Neumann  <sven@gimp.org>
+
+	* announcements/open-usability-gimp.htrw: added announcement for
+	OpenUsability project.
+
 2006-07-13  Sven Neumann  <sven@gimp.org>
 
 	* tutorials/Smart_Sharpening/warp-sharp.htrw: updated Script-Fu
