--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2006-08-14  Sven Neumann  <sven@gimp.org>
+
+	* announcements/open-usability-gimp.htrw: corrected a paragraph.
+
 2006-08-11  Sven Neumann  <sven@gimp.org>
 
 	* announcements/open-usability-gimp.htrw: added announcement for
