--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2006-08-16  Sven Neumann  <sven@gimp.org>
+
+	* links/index.htrw: some cleanup.
+
 2006-08-14  Sven Neumann  <sven@gimp.org>
 
 	* announcements/open-usability-gimp.htrw: corrected a paragraph.
