added a link to gimpusers.de.
2006-08-17  Sven Neumann  <sven@gimp.org>

	* links/index.htrw: added a link to gimpusers.de.

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2006-08-17  Sven Neumann  <sven@gimp.org>
+
+	* links/index.htrw: added a link to gimpusers.de.
+
 2006-08-16  Sven Neumann  <sven@gimp.org>
 
 	* links/index.htrw: some cleanup.
