--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2006-08-24  Sven Neumann  <sven@gimp.org>
+
+	* downloads/index.htrw: updated for 2.2.13 release.
+
 2006-08-17  Sven Neumann  <sven@gimp.org>
 
 	* links/index.htrw: added a link to gimpusers.de.
