--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2006-09-04  Sven Neumann  <sven@gimp.org>
+
+	* mail_lists.htrw: minor changes.
+
 2006-08-30  Sven Neumann  <sven@gimp.org>
 
 	* includes/wgo-page-init.xhtml: removed some links from the side
