updated for 2.3.11 release.
2006-09-07  Sven Neumann  <sven@gimp.org>

	* downloads/index.htrw: updated for 2.3.11 release.

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2006-09-07  Sven Neumann  <sven@gimp.org>
+
+	* downloads/index.htrw: updated for 2.3.11 release.
+
 2006-09-04  Sven Neumann  <sven@gimp.org>
 
 	* mail_lists.htrw: minor changes.
