--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2006-09-09  Sven Neumann  <sven@gimp.org>
+
+	* announcements/open-usability-gimp.htrw: mention the end of the
+	application period.
+
 2006-09-07  Sven Neumann  <sven@gimp.org>
 
 	* downloads/index.htrw: updated for 2.3.11 release.
