--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2006-10-11  Sven Neumann  <sven@gimp.org>
+
+	* includes/wgo-page-init.xhtml: changed RSS feed back to the
+	official RSS 1.0 feed. Fixes bug #348129.
+
 2006-09-09  Sven Neumann  <sven@gimp.org>
 
 	* announcements/open-usability-gimp.htrw: mention the end of the
