--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,9 @@
 2006-10-11  Sven Neumann  <sven@gimp.org>
 
+	* downloads/index.htrw: updated for 2.3.12 release.
+
+2006-10-11  Sven Neumann  <sven@gimp.org>
+
 	* includes/wgo-page-init.xhtml: changed RSS feed back to the
 	official RSS 1.0 feed. Fixes bug #348129.
 
