--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2006-11-24  Sven Neumann  <sven@gimp.org>
+
+	* downloads/index.htrw: updated for 2.3.13 release.
+
 2006-10-11  Sven Neumann  <sven@gimp.org>
 
 	* downloads/index.htrw: updated for 2.3.12 release.
