--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2007-01-06  Michael Schumacher  <schumaml@cvs.gnome.org>
+
+	* 
+
 2006-12-05  Kevin Cozens  <kcozens@cvs.gnome.org>
 
 	* gimp-tutorials/Basic_Batch/index.htrw: fixed error in
