--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2007-01-23  Sven Neumann  <sven@gimp.org>
+
+	* includes/wgo-page-init.xhtml: fix bug #348129 once more.
+
 2007-01-06  Michael Schumacher  <schumaml@cvs.gnome.org>
 
 	* 
