--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,11 @@
 2007-01-28  Sven Neumann  <sven@gimp.org>
 
+	* os2: removed completely.
+
+	* admin/gimp-web-urls: removed references to OS2 specific information.
+
+2007-01-28  Sven Neumann  <sven@gimp.org>
+
 	* includes/wgo-page-init.xhtml: changed "The GIMP" to "GIMP".
 
 2007-01-28  Sven Neumann  <sven@gimp.org>
