--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,7 @@
 2007-01-28  Sven Neumann  <sven@gimp.org>
 
+	* downloads/index.htrw (href): corrected link to the user manual.
+
 	* includes/wgo-page-fini.xhtml: updated copyright.
 
 2007-01-28  Sven Neumann  <sven@gimp.org>
