--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,10 @@
 2007-01-28  Sven Neumann  <sven@gimp.org>
 
+	* about/splash/index.htrw: removed reference to the 2.2 splash
+	contest. Fixes bug #377015.
+
+2007-01-28  Sven Neumann  <sven@gimp.org>
+
 	* docs/scheme_plugin/scheme-overview.html: corrected link to the
 	SIOD reference (bug #372589).
 
