updated menu paths.
2007-01-29  Sven Neumann  <sven@gimp.org>

	* tutorials/Sketch_Effect/index.htrw: updated menu paths.


svn path=/trunk/; revision=1444

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2007-01-29  Sven Neumann  <sven@gimp.org>
+
+	* tutorials/Sketch_Effect/index.htrw: updated menu paths.
+
 2007-01-28  Sven Neumann  <sven@gimp.org>
 
 	* about/splash/index.htrw: removed reference to the 2.2 splash
