updated for migration to Subversion.
2007-01-29  Sven Neumann  <sven@gimp.org>

	* source/index.htrw: updated for migration to Subversion.


svn path=/trunk/; revision=1446

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,7 @@
 2007-01-29  Sven Neumann  <sven@gimp.org>
 
+	* source/index.htrw: updated for migration to Subversion.
+
 	* includes/urls_go-developer.inc: link to Subversion instead of CVS.
 
 2007-01-29  Sven Neumann  <sven@gimp.org>
