--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2007-02-22  Roman Joost  <romanofski@gimp.org>
+
+	* programmatic/admin/news/icons/lgm-banner-small.png: replaced
+	old LGM banner with the new one
+
 2007-01-29  Sven Neumann  <sven@gimp.org>
 
 	* source/index.htrw: updated for migration to Subversion.
