--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2007-02-24  Michael Schumacher  <schumaml@cvs.gnome.org>
+
+	* style/wgo.css: use a[href] attribute selector to avoid
+	underlining and color changes on hover for local anchors.
+
 2007-02-22  Roman Joost  <romanofski@gimp.org>
 
 	* programmatic/admin/news/icons/lgm-banner-small.png: replaced
@@ -216,7 +221,7 @@
 
 2006-05-13  Carol Spears  <carol@gimp.org>
 	* docs/python/pygimp.html, index.html: fixed typos and
-	mis-spellings as discovered by Roman Fro³ow and reported on
+	mis-spellings as discovered by Roman Froow and reported on
 	irc (#gimp).  An additional run with ISpell found many more that
 	it fixed...
 
