--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2007-02-28  Michael Schumacher  <schumaml@cvs.gnome.org>
+
+	* source/howtos/stable-svn-build.htrw: new file, partial rewrite
+	of old cvs build guide.
+
 2007-02-24  Michael Schumacher  <schumaml@cvs.gnome.org>
 
 	* style/wgo.css: use a[href] attribute selector to avoid
