--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2007-03-03  Simon Budig  <simon@gimp.org>
+
+	* screenshots/index.htrw: fix right border.
+
 2007-03-02  Simon Budig  <simon@gimp.org>
 
 	* screenshots/index.htrw: added new multihead screenshot.
