updated for 2.3.15 release.
2007-03-09  Sven Neumann  <sven@gimp.org>

        * downloads/index.htrw: updated for 2.3.15 release.


svn path=/trunk/; revision=1453

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2007-03-09  Sven Neumann  <sven@gimp.org>
+
+	* downloads/index.htrw: updated for 2.3.15 release.
+
 2007-03-03  Simon Budig  <simon@gimp.org>
 
         * screenshots/index.htrw: fix caption of multihead screenshot.
