--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2007-03-13  Jakub Steiner <jimmac@ximian.com>
+
+	* links/index.htrw: add Blender and provide saner Inkscape
+	  description.
+	
 2007-03-12  Karine Delvare  <edhel@gimp.org>
 
 	* release-notes/*.png: renamed from these...
