--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,9 @@
 2007-03-15  Jakub Steiner <jimmac@ximian.com>
 
+	* release-notes/gimp-2.4.htrw: markup and layout fixes.
+
+2007-03-15  Jakub Steiner <jimmac@ximian.com>
+
 	* images/frontsplash.png
 	* images/titlebar.png
 	* images/awards.png: titlebar, front splash and awards images for
