--- a/ChangeLog
+++ b/ChangeLog
@@ -1,6 +1,8 @@
 2007-03-15  Jakub Steiner <jimmac@ximian.com>
 
 	* release-notes/gimp-2.4.htrw: markup and layout fixes.
+	* includes/wgo-page-init.htrw: make the titlebar link to the
+	  frontpage
 
 2007-03-15  Jakub Steiner <jimmac@ximian.com>
 
