--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2007-03-17  Jakub Steiner <jimmac@ximian.com>
+
+	* release-notes/gimp-2.4.htrw
+	* release-notes/images/2.4-releasesplash.png: initial splash. The
+	  sheets of paper will need to vary a bit.
+
 2007-03-15  Jakub Steiner <jimmac@ximian.com>
 
 	* images/frontsplash.png: make the wilberbaloon smile
