includes/wgo-page-init.xhtml docs/index.htrw User FAQ contributed by David
2007-03-19  Karine Delvare  <edhel@gimp.org>

	* includes/wgo-page-init.xhtml
	* docs/index.htrw
	* docs/userfaq.htrw: User FAQ contributed by David Marrs.



svn path=/branches/v2.4/; revision=1472

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2007-03-19  Karine Delvare  <edhel@gimp.org>
+
+	* includes/wgo-page-init.xhtml
+	* docs/index.htrw
+	* docs/userfaq.htrw: User FAQ contributed by David Marrs.
+
 2007-03-19  Jakub Steiner <jimmac@gimp.org>
 
 	* admin/gimp-web-urls:
