admin/gimp-web-urls about/splash/index.htrw
2007-03-20  Raphael Quinet  <raphael@gimp.org>

	* admin/gimp-web-urls
	* about/splash/index.htrw
	* about/splash/splash-images/gimp-splash-r*.png
	* about/splash/splash-images/gimp-splash-r*.gif
	* about/splash/splash-images/splash-2.3.htrw: Splash screens and
	thumbnails for the 2.3.x releases.

svn path=/branches/v2.4/; revision=1474

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,12 @@
+2007-03-20  Raphaël Quinet  <raphael@gimp.org>
+
+	* admin/gimp-web-urls
+	* about/splash/index.htrw
+	* about/splash/splash-images/gimp-splash-r*.png
+	* about/splash/splash-images/gimp-splash-r*.gif
+	* about/splash/splash-images/splash-2.3.htrw: Splash screens and
+	thumbnails for the 2.3.x releases.
+
 2007-03-19  Karine Delvare  <edhel@gimp.org>
 
 	* docs/userfaq.htrw: reformatting, cleanup of the first part.
