about/splash/stable.png about/splash/unstable.png make the splash list a
2007-03-20  Jakub Steiner <jimmac@gimp.org>

  * about/splash/stable.png
  * about/splash/unstable.png
  * style/wgo.css: make the splash list a bit fancier

svn path=/branches/v2.4/; revision=1476

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2007-03-20  Jakub Steiner <jimmac@gimp.org>
+
+	* about/splash/stable.png
+	* about/splash/unstable.png
+	* style/wgo.css: make the splash list a bit fancier
+
 2007-03-20  Raphaël Quinet  <raphael@gimp.org>
 
 	* admin/gimp-web-urls
