--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2007-03-21  Sven Neumann  <sven@gimp.org>
+
+	* images/wilber16.png: replaced with the new style wilber icon.
+
 2007-03-21  Jakub Steiner <jimmac@gimp.org>
 
 	* images/awards.png
