--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2007-03-22  Sven Neumann  <sven@gimp.org>
+
+	* develop/index.htrw: minor rephrasing, removed commented out content.
+
 2007-03-21  Sven Neumann  <sven@gimp.org>
 
 	* images/wilber16.png: replaced with the new style wilber icon.
