style/wgo.css features/barrel-distortion.jpg features/perspective.jpg
2007-03-22  Jakub Steiner <jimmac@gimp.org>

  * style/wgo.css
  * features/barrel-distortion.jpg
  * features/perspective.jpg
  * features/index.htrw: Initial bits of the 'features' page. Maybe
    we want to use thumbnails instead...

svn path=/branches/v2.4/; revision=1482

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,11 @@
+2007-03-22  Jakub Steiner <jimmac@gimp.org>
+
+	* style/wgo.css
+	* features/barrel-distortion.jpg
+	* features/perspective.jpg
+	* features/index.htrw: Initial bits of the 'features' page. Maybe
+	  we want to use thumbnails instead...
+
 2007-03-22  Sven Neumann  <sven@gimp.org>
 
 	* develop/index.htrw: minor rephrasing, removed commented out content.
