--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2007-03-22  Sven Neumann  <sven@gimp.org>
+
+	* index.htrw: changed link that was pointing to gimp-web.jimmac.net.
+
 2007-03-22  Jakub Steiner <jimmac@gimp.org>
 
 	* features/histogram.png
