--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,7 @@
 2007-03-22  Sven Neumann  <sven@gimp.org>
 
+	* donating/index.htrw: slightly rephrased.
+
 	* index.htrw: changed link that was pointing to gimp-web.jimmac.net.
 
 2007-03-22  Jakub Steiner <jimmac@gimp.org>
