--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,29 @@
+2007-03-22  Raphaël Quinet  <raphael@gimp.org>
+
+	First part of the splash screen cleanup.  The next part will
+	rename all images according to their SVN revision numbers.
+
+	* about/splash/gimp/
+	* about/splash/gimp-1.1/
+	* about/splash/gimp-1.3/
+	* about/splash/*.txt: deleted 46 obsolete files and directories.
+
+	* about/splash/splash-images/splash-1.1.htrw
+	* about/splash/splash-images/splash-1.3.htrw
+	* about/splash/splash-images/splash-2.1.htrw
+	* about/splash/splash-images/splash-2.3.htrw
+	* about/splash/unstable-1.1.htrw
+	* about/splash/unstable-1.3.htrw
+	* about/splash/unstable-2.1.htrw
+	* about/splash/unstable-2.3.htrw: renamed and moved up one dir,
+	adjusted the paths to all images.
+	
+	* about/splash/splash-images/*
+	* about/splash/images/*: renamed to avoid unnecessary redundancy
+	in the URLs.
+	
+	* admin/gimp-web-urls: New locations for wgo:about-splash-*.
+
 2007-03-22  Jakub Steiner <jimmac@ximian.com>
 
 	* donating/*.png: tweak existing sponsor graphics
