--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2007-03-26  Karine Delvare  <edhel@gimp.org>
+
+	* docs/userfaq.htrw: more cleanup, not finished yet.
+
 2007-03-26  Raphaël Quinet  <raphael@gimp.org>
 
 	* admin/gimp-web-urls: Temporary fix for the paths to stable
