--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2007-03-29  Jakub Steiner <jimmac@ximian.com>
+
+	* style/wgo.css: make h2 and h3 differ more.
+
 2007-03-26  Karine Delvare  <edhel@gimp.org>
 
 	* docs/userfaq.htrw: more cleanup, not finished yet.
